# jel

./: .gitignore  ChangeLog.md  Makefile  README.md  Types.hs  cabal.config  jel.cabal
src/: Buffer.hs  Event.hs  Gui.hs  Handler.hs  Helpers.hs  Input.hs  Main.hs  Repetition.hs  State.hs  StateChange.hs  Types.hs  Window.hs  _scratch.hs
test/: Tests.hs
testdata/: test.txt
