name:                jel
version:             0.1.0.0
synopsis:            A VI-like editor.
homepage:            https://jelle.xyz/
license:             GPL-3
license-file:        LICENSE
author:              Jelle Hermsen
maintainer:          j@jelle.xyz
category:            Text
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

executable jel
    main-is:             Main.hs
    other-modules:       Types, Window, Buffer, State, Helpers, Gui, Event, Input, StateChange
    default-extensions:  OverloadedStrings
    ghc-options:         -optl-no-pie
    build-depends:       base >=4.9, containers >= 0.6.0.1,
                         ncurses >= 0.2.16, text >= 1.2.2.2
    hs-source-dirs:      src
    default-language:    Haskell2010

Test-Suite test-jel
    type:                exitcode-stdio-1.0
    main-is:             Tests.hs
    ghc-options:         -optl-no-pie
    hs-source-dirs:      test
    build-depends:       base >= 4.9, Cabal >= 3.0
    default-language:    Haskell2010
